# Aruba_MM

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  build_windows_gui_exe.ps1  cli_launcher.py  constraints.txt  gui_launcher.py  pyproject.toml  setup.cfg  web_launcher.py
.github/workflows/: pr-validation.yml  release.yml
config/mock_scenarios/: profiling_users.txt
docs/: USER_GUIDE_KO.md
src/aruba_mm_cleanup/: __init__.py  cleanup.py  cli.py  connection.py  gui_app.py  models.py  parser.py  session.py  web_app.py  web_support.py
tests/: test_cleanup.py  test_cleanup_stability.py  test_gui_support.py  test_parser.py  test_parser_stability.py  test_tooling.py  test_web_app.py
tests/fixtures/: aruba_global_user_table_dotted.txt  aruba_global_user_table_filtered_compact.txt  aruba_global_user_table_mixed_reasoned.txt  aruba_global_user_table_standard.txt  aruba_global_user_table_user_first_type.txt
tools/: validate.ps1  verify_release_package.py
