[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aruba-mm-cleanup"
version = "0.1.0"
description = "Windows dashboard for Aruba Mobility Master profiling-role MAC cleanup."
requires-python = ">=3.9"
dependencies = [
  "netmiko>=4.3.0",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.0",
  "pytest>=8.0",
]

[project.scripts]
aruba-mm-cleanup = "aruba_mm_cleanup.cli:main"
aruba-mm-cleanup-gui = "aruba_mm_cleanup.gui_app:main"

[tool.setuptools.packages.find]
where = ["src"]
