[metadata]
name = aruba-mm-cleanup
version = 0.1.0
description = Windows dashboard for Aruba Mobility Master profiling-role MAC cleanup.

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    netmiko>=4.3.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pyinstaller>=6.0
    pytest>=8.0

[options.entry_points]
console_scripts =
    aruba-mm-cleanup = aruba_mm_cleanup.cli:main
    aruba-mm-cleanup-gui = aruba_mm_cleanup.gui_app:main
